--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 body {
   margin: 0;
   padding: 0;
@@ -8,6 +10,8 @@ body {
   font-family: "Roboto", sans-serif;
   color: #A7A7A7;
   font-size: 14px;
+
+  overflow: hidden;
 }
 
 button {
