fix(vuex) Fix some bugs in vuex

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,12 @@ button {
   font: inherit;
   cursor: pointer;
   outline: inherit;
+
+  &:disabled {
+    cursor: no-drop;
+    background-color: gray;
+    color: #505050;
+  }
 }
 
 input {
