--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,14 @@ $main-background: #E7E9F3;
 $footer-background: #F3F3F3;
 $components-background: #FFFFFF;
 
+$logo-color: #C93E70;
+$search-color: #1F2B5A;
+$top-menu-color: #1F2B5A;
+$profile-color: #1F2B5A;
+
+$links-color: #1F2B5A;
+$social-media-color: #1F2B5A;
+
 $form-font-color: #505050;
 $font-blue: #5D699A;
 
